# BetterWorldBookApi

./: .gitignore  Makefile  README.md  TODO  manage.py  pyproject.toml
apps/: urls.py
apps/shared/: models.py  paginations.py  utils.py
apps/shops/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/shops/fixtures/: country.json  user.json
apps/users/: admin.py  email_service.py  forms.py  managers.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/users/templates/: email.html
root/: celery.py  drf_settings.py  settings.py  urls.py  wsgi.py
